--- a/index.html
+++ b/index.html
@@ -3,12 +3,95 @@
   <head>
     <meta charset='utf-8'>
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
+	<title>CSC014 Calendar</title>
+	<link href='css/fullcalendar.css' rel='stylesheet' />
+	<link href='css/fullcalendar.print.css' rel='stylesheet' media='print' />
+    <link rel="stylesheet" type="text/css" href="css/stylesheet.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="css/pygment_trac.css" media="screen" />
+    <link rel="stylesheet" type="text/css" href="css/print.css" media="print" />
+	
+	<script src='js/jquery.min.js' type="text/javascript"></script>
+	<script src='js/jquery-ui.custom.min.js' type="text/javascript"></script>
+	<script src='js/fullcalendar.min.js' type="text/javascript"></script>
+	
 
-    <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/pygment_trac.css" media="screen" />
-    <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print" />
+    <script type="text/javascript">
 
-    <title>Tbl2cal by SupaStuff</title>
+    $(document).ready(function () {
+
+        var date = new Date();
+        var d = date.getDate();
+        var m = date.getMonth();
+        var y = date.getFullYear();
+
+        $('#calendar').fullCalendar({
+            editable: true,
+            events: [
+				{
+				    title: 'All Day Event',
+				    start: new Date(y, m, 1)
+				},
+				{
+				    title: 'Long Event',
+				    start: new Date(y, m, d - 5),
+				    end: new Date(y, m, d - 2)
+				},
+				{
+				    id: 999,
+				    title: 'Repeating Event',
+				    start: new Date(y, m, d - 3, 16, 0),
+				    allDay: false
+				},
+				{
+				    id: 999,
+				    title: 'Repeating Event',
+				    start: new Date(y, m, d + 4, 16, 0),
+				    allDay: false
+				},
+				{
+				    title: 'Meeting',
+				    start: new Date(y, m, d, 10, 30),
+				    allDay: false
+				},
+				{
+				    title: 'Lunch',
+				    start: new Date(y, m, d, 12, 0),
+				    end: new Date(y, m, d, 14, 0),
+				    allDay: false
+				},
+				{
+				    title: 'Birthday Party',
+				    start: new Date(y, m, d + 1, 19, 0),
+				    end: new Date(y, m, d + 1, 22, 30),
+				    allDay: false
+				},
+				{
+				    title: 'Click for Google',
+				    start: new Date(y, m, 28),
+				    end: new Date(y, m, 29),
+				    url: 'http://google.com/'
+				}
+            ]
+        });
+
+    });
+
+</script>
+<style type="text/css">
+
+	body {
+		margin-top: 40px;
+		text-align: center;
+		font-size: 14px;
+		font-family: "Lucida Grande",Helvetica,Arial,Verdana,sans-serif;
+		}
+
+	#calendar {
+		width: 900px;
+		margin: 0 auto;
+		}
+
+</style>
   </head>
 
   <body>
@@ -17,49 +100,12 @@
       <div class="container">
         <h1>Tbl2cal</h1>
         <h2></h2>
-
-        <section id="downloads">
-          <a href="https://github.com/SupaStuff/tbl2Cal/zipball/master" class="btn">Download as .zip</a>
-          <a href="https://github.com/SupaStuff/tbl2Cal/tarball/master" class="btn">Download as .tar.gz</a>
-          <a href="https://github.com/SupaStuff/tbl2Cal" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
-        </section>
       </div>
     </header>
 
     <div class="container">
-      <section id="main_content">
-        <h3>
-<a name="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
-
-<h3>
-<a name="designer-templates" class="anchor" href="#designer-templates"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
-
-<h3>
-<a name="rather-drive-stick" class="anchor" href="#rather-drive-stick"><span class="octicon octicon-link"></span></a>Rather Drive Stick?</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a name="authors-and-contributors" class="anchor" href="#authors-and-contributors"><span class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a name="support-or-contact" class="anchor" href="#support-or-contact"><span class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
+		
+<div id='calendar'></div>
     </div>
 
     
